<resources>
<!--<<<<<<<<<<<<<< FOR SPLASH SCREEN DURATIONS >>>>>>>>>>>>-->

    <integer name="first_time_individual_gradient_duration">1450</integer>
    <integer name="other_time_individual_gradient_duration">2500</integer>

<!--<<<<<<<<<<<<<< MAIN ACTIVITY >>>>>>>>>>>>>>-->

    <string name="app_name">Kata Kuti</string>

    <string name="game_result_player2won">PLAYER 2 WON</string>
    <string name="game_result_player1won">PLAYER 1 WON</string>
    <string name="game_result_tie">IT\'S A TIE</string>
    <string name="game_end_greetings">Have a good day!!</string>
    <string name="game_exit_direction">Press back button again to Exit</string>

    <string name="game_exit_positive_button">Exit Game</string>
    <string name="game_exit_negative_button">Start New Match</string>

    <string name="match_result_Player1Won_message">Player 1 WON This Match</string>
    <string name="match_result_Player2Won_message">Player 2 WON This Match</string>
    <string name="match_result_Tie_message">It\'s a TIE, Oops!</string>

    <string name="match_exit_dialog_warning">Current Match In Progress,Want to Exit?</string>
    <string name="match_exit_positive_button">Exit Match</string>
    <string name="match_exit_negative_button">Keep Playing</string>

<!--<<<<<<<<<<<<<< NOTIFICATION UTILS >>>>>>>>>>>>>>-->

    <string name="match_in_progress_notification_channel_id">match_in_progress_notification_channel</string>
    <string name="match_in_progress_notification_channel_name">MATCH IN PROGRESS CHANNEL</string>
    <string name="notificaation_content_title">Kata Kuti</string>
    <string name="notification_content_text">Match In Progress</string>
    <string name="notification_content_big_text_part1">Current match is in progress</string>
    <string name="notification_content_big_text_part2">Tap here to resume!!</string>
    <string name="notification_content_action_button_ignore">IGNORE</string>

<!--<<<<<<<<<<<<<< SPLASH ACTIVITY >>>>>>>>>>>>>>-->


<!--<<<<<<<<<<<<<< SETTINGS ACTIVITY >>>>>>>>>>>>>>-->


<!--<<<<<<<<<<<<<< SETTINGS FRAGMENT >>>>>>>>>>>>>>-->

    <string name="about_me_title">About Me</string>
    <string name="about_me_message">"Hi, I am Shankha Shubhra Sanyal,
anime lover, painter and a coder too XD
it's been a long time now i've been learning android but this is the first time i'm trying to build a complete app.
This app took 3weeks and a couple of days to build from an empty screen to what you are seeing now.
Explore the app,play and enjoy with your family and friends :D

I have made the entire code open source :D
Anyone who liked any feature and wants to implement into their app..
you are always welcome to have a look.

Please share this app if you liked it and
don't forget to leave a feedback :D
(Your feedback is very important for me!)
----------------------------------------
Github: S-C-U-B-E
Mail: sssanyal10@gmail.com
----------------------------------------
Thank You."</string>
    
    <string name="about_game_title">About Kata-Kuti</string>
    <string name="about_game_message">"The game Kata-Kuti is a classic and the most famous game among students,\n
now you can also play it on your android device, consists of two modes\n
1. You v/s Your Friend
2. You v/s Scube Artificial Intelligence ( aka S.A.I );

S.A.I is pretty good in this game and at times he can even play better.The rules are the same, but here you can play a match with multiple rounds.You can even change the theme to what you want.\n
In the middle of a match if you have to attain any important task don't worry, you can return to your game and resume from where u left.Or, you can even use the notification bar to do the same.\n
------------------------------------------
Announcement :-
1.Online_Multiplayer version with leader board
2.Several new themes
Coming Soon!!
-------------------------------------------"</string>


<!--<<<<<<<<<<<<<< XML PREF VISUALIZER ACTIVITY >>>>>>>>>>>>>>-->

    <string name="symbol_preference_category_title">Kata/Kuti</string>
    <string name="symbol_switch_preference_key" translatable="false">symbol</string>
    <string name="symbol_switch_preference_title">Symbol</string>
    <string name="symbol_switch_preference_summary_On">PLAYER 1- \'X\'\nPLAYER 2- \'O\'</string>
    <string name="symbol_switch_preference_summary_Off">PLAYER 1- \'O\'\nPLAYER 2- \'X\'</string>
    <string name="symbol_switch_preference_defaultValue" translatable="false">true</string>


    <!--  GAME MODE  -->
    <string name="game_mode_preference_category_title">Game Mode</string>
    <string name="game_mode_preference_category_key" translatable="false">mode</string>
    <string name="game_mode_preference_category_summary">(Difficulty applicable for One-Player mode!)</string>

    <string name="game_mode_switch_preference_title">Mode</string>
    <string name="game_mode_switch_preference_defaultValue" translatable="false">true</string>
    <string name="game_mode_switch_preference_key" translatable="false">gamemode</string>
    <string name="game_mode_switch_preference_summaryOff">One-Player Mode</string>
    <string name="game_mode_switch_preference_summaryOn">Two-Player Mode</string>

    <string name="game_mode_list_preference_title">Difficulty</string>
    <string name="game_mode_list_preference_defaultValue" translatable="false">easy</string>
    <string name="game_mode_list_preference_key" translatable="false">difficulty</string>



    <!--  MUSIC  -->
    <string name="music_preference_category_title">Music</string>

    <string name="music_checkBox_preference_backgroundMusic_title">Background Music</string>
    <string name="music_checkBox_preference_backgroundMusic_defaultValue" translatable="false">true</string>
    <string name="music_checkBox_preference_backgroundMusic_key" translatable="false">music</string>
    <string name="music_checkBox_preference_backgroundMusic_summaryOff">Tap to turn on music</string>
    <string name="music_checkBox_preference_backgroundMusic_summaryOn">Tap to turn off music</string>

    <string name="music_checkBox_preference_applause_title">Applause</string>
    <string name="music_checkBox_preference_applause_defaultValue" translatable="false">true</string>
    <string name="music_checkBox_preference_applause_key" translatable="false">applause</string>
    <string name="music_checkBox_preference_applause_summaryOff">Tap to get applause</string>
    <string name="music_checkBox_preference_applause_summaryOn">Everyone loves an applause.. tap if you don\'t</string>



    <!--  NOTIFICATION  -->
    <string name="notification_preference_category_title">Notification</string>

    <string name="notification_checkBox_preference_title">Match In Progress</string>
    <string name="notification_checkBox_preference_defaultValue" translatable="false">true</string>
    <string name="notification_checkBox_preference_key" translatable="false">notification</string>
    <string name="notification_checkBox_preference_summaryOff">Notification turned Off</string>
    <string name="notification_checkBox_preference_summaryOn">Notification turned On</string>

    <string name="notification_switch_preference_vibration_title">Vibration</string>
    <string name="notification_switch_preference_vibration_defaultValue" translatable="false">true</string>
    <string name="notification_switch_preference_vibration_key" translatable="false">vibration</string>
    <string name="notification_switch_preference_vibration_summaryOff">Vibration turned Off</string>
    <string name="notification_switch_preference_vibration_summaryOn">Vibration turned On</string>

    <string name="notification_switch_preference_sound_title">Sound</string>
    <string name="notification_switch_preference_sound_defaultValue" translatable="false">true</string>
    <string name="notification_switch_preference_sound_key" translatable="false">sound</string>
    <string name="notification_switch_preference_sound_summaryOff">Notification sound turned Off</string>
    <string name="notification_switch_preference_sound_summaryOn">Notification sound turned On</string>



    <!--  PALATE  -->
    <string name="palate_preference_category_title">Palate</string>
    <string name="palate_preference_category_summary">NOTE: Re-launch the app to apply!!</string>


    <string name="palate_list_preference_title">Theme</string>
    <string name="palate_list_preference_key" translatable="false">theme</string>
    <string name="palate_list_preference_defaultValue" translatable="false">water</string>

    <!--   ABOUT   -->
    <string name="about_preference_category_title">About</string>

    <string name="about_preference_version_title">Version 2.5.3</string>
    <string name="about_preference_version_key" translatable="false">about_game</string>

    <string name="about_preference_about_me_title">About Me</string>
    <string name="about_preference_about_me_key" translatable="false">about_me</string>

    <string name="about_preference_feedback_title">Feedback Form</string>
    <string name="about_preference_feedback_key" translatable="false">feedback</string>

</resources>
