<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/symbol_preference_category_title"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false">

        <SwitchPreference android:title="@string/symbol_switch_preference_title"
            android:defaultValue="@string/symbol_switch_preference_defaultValue"
            android:key="@string/symbol_switch_preference_key"
            android:summaryOn="@string/symbol_switch_preference_summary_On"
            android:summaryOff="@string/symbol_switch_preference_summary_Off"
            android:icon="@drawable/ic_settings_katakuti" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/game_mode_preference_category_title"
        app:allowDividerBelow="true"
        android:key="@string/game_mode_preference_category_key"
        android:summary="@string/game_mode_preference_category_summary"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false">

        <SwitchPreference android:title="@string/game_mode_switch_preference_title"
            android:defaultValue="@string/game_mode_switch_preference_defaultValue"
            android:key="@string/game_mode_switch_preference_key"
            android:summaryOn="@string/game_mode_switch_preference_summaryOn"
            android:summaryOff="@string/game_mode_switch_preference_summaryOff"
            android:icon="@drawable/ic_settings_videogame"/>

        <ListPreference android:title="@string/game_mode_list_preference_title"
            android:defaultValue="@string/game_mode_list_preference_defaultValue"
            android:entries="@array/prefer_difficulty_option_lables"
            android:entryValues="@array/prefer_difficulty_option_values"
            android:key="@string/game_mode_list_preference_key"
            android:icon="@drawable/ic_settings_difficulty"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/music_preference_category_title"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false">

            <CheckBoxPreference android:title="@string/music_checkBox_preference_backgroundMusic_title"
                android:defaultValue="@string/music_checkBox_preference_backgroundMusic_defaultValue"
                android:key="@string/music_checkBox_preference_backgroundMusic_key"
                android:summaryOff="@string/music_checkBox_preference_backgroundMusic_summaryOff"
                android:summaryOn="@string/music_checkBox_preference_backgroundMusic_summaryOn"
                android:icon="@drawable/ic_settings_volume_up" />

            <CheckBoxPreference android:title="@string/music_checkBox_preference_applause_title"
                android:defaultValue="@string/music_checkBox_preference_applause_defaultValue"
                android:key="@string/music_checkBox_preference_applause_key"
                android:summaryOff="@string/music_checkBox_preference_applause_summaryOff"
                android:summaryOn="@string/music_checkBox_preference_applause_summaryOn"
                android:icon="@drawable/ic_settings_applause_up"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_preference_category_title"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false">

        <CheckBoxPreference android:title="@string/notification_checkBox_preference_title"
            android:defaultValue="@string/notification_checkBox_preference_defaultValue"
            android:key="@string/notification_checkBox_preference_key"
            android:summaryOff="@string/notification_checkBox_preference_summaryOff"
            android:summaryOn="@string/notification_checkBox_preference_summaryOn"
            android:icon="@drawable/ic_settings_notifications_active"/>

        <SwitchPreference android:title="@string/notification_switch_preference_vibration_title"
            android:defaultValue="@string/notification_switch_preference_vibration_defaultValue"
            android:key="@string/notification_switch_preference_vibration_key"
            android:summaryOn="@string/notification_switch_preference_vibration_summaryOn"
            android:summaryOff="@string/notification_switch_preference_vibration_summaryOff"
            android:icon="@drawable/ic_settings_notification_vibration"/>

        <SwitchPreference android:title="@string/notification_switch_preference_sound_title"
            android:defaultValue="@string/notification_switch_preference_sound_defaultValue"
            android:key="@string/notification_switch_preference_sound_key"
            android:summaryOn="@string/notification_switch_preference_sound_summaryOn"
            android:summaryOff="@string/notification_switch_preference_sound_summaryOff"
            android:icon="@drawable/ic_settings_notification_sound"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/palate_preference_category_title"
        android:summary="@string/palate_preference_category_summary"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false">

        <ListPreference android:title="@string/palate_list_preference_title"
            android:defaultValue="@string/palate_list_preference_defaultValue"
            android:entries="@array/prefer_color_option_lables"
            android:entryValues="@array/prefer_color_option_values"
            android:key="@string/palate_list_preference_key"
            android:icon="@drawable/ic_settings_palette"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_preference_category_title"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false"
        android:selectable="false"
        android:persistent="false"/>

    <Preference android:title="@string/about_preference_version_title"
        android:key="@string/about_preference_version_key"
        android:iconSpaceReserved="false"
        app:iconSpaceReserved="false"
        android:persistent="false" />

    <Preference android:title="@string/about_preference_about_me_title"
        android:key="@string/about_preference_about_me_key"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false"
        android:persistent="false"/>

    <Preference android:title="@string/about_preference_feedback_title"
        android:key="@string/about_preference_feedback_key"
        app:iconSpaceReserved="false"
        android:iconSpaceReserved="false"
        android:summary="Tap to give a feedback!\n(You will be taken to a Google Form!)\nThis will take just a few moments!"
        android:persistent="false"/>

</PreferenceScreen>